--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "bp/",
   "version": "1.2.2",
   "description": "Shortlinks for Blueprint",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "background": {
-    "scripts": ["background.js"],
-    "persistent": true
+    "service_worker": "background.js"
   },
-  "permissions": ["<all_urls>", "webRequest", "webRequestBlocking", "tabs"],
+  "permissions": ["webRequest", "tabs", "declarativeNetRequest"],
+  "host_permissions": ["<all_urls>"],
   "chrome_settings_overrides": {
     "search_provider": {
       "name": "bp/",
