--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,17 @@
 {
   "name": "bp/",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Shortlinks for Blueprint",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["webRequest", "tabs", "declarativeNetRequest"],
-  "host_permissions": ["<all_urls>"],
+  "permissions": [
+    "webNavigation",
+    "tabs",
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback"
+  ],
   "chrome_settings_overrides": {
     "search_provider": {
       "name": "bp/",
@@ -23,5 +27,14 @@
     "16": "icon-16.png",
     "48": "icon-48.png",
     "128": "icon-128.png"
+  },
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "redirect",
+        "enabled": true,
+        "path": "rules.json"
+      }
+    ]
   }
 }
